--- a/ourc_data.htm
+++ b/ourc_data.htm
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8"/>
   <title>OURC Data Page</title>
-  <meta name="keywords" content=""/>
-  <meta name="description" content=""/>
-  <meta name="author" content="Author Name"/>
+  <meta name="keywords" content="Open University, running club"/> <!--Metadata added-->
+  <meta name="description" content="OURC is your place to meet people, keep fit and have fun"/>
+  <meta name="author" content="Online Solutions"/>
   <link rel="stylesheet" href="ourc_styles.css"/>
 </head>
 
@@ -23,23 +23,24 @@
     </nav>
 <!--This is a html comment. Comments are not rendered by the browser-->
 
-<table id="tableoctober"> <!--Q1 mispelt tag-->
+<table id="tableoctober"><!--Q1 misspelt tag-->
+<caption>Open University Running Club Competition. October 2018</caption>
+
+    <!--<td colspan="9">Open University Running Club Competition. October 2018</td> Q2 caption added-->
+
 <tr>
-    <td colspan="9">Open University Running Club Competition. October 2018</td>
+    <th scope="col">Position</th> <!--Q2 headers inserted-->
+    <th scope="col">First Name</th>
+    <th scope="col">Last Name</th>
+    <th scope="col">Gender</th>
+    <th scope="col">Age-Group</th>
+    <th scope="col">5 Mile</th>
+    <th scope="col">5 Km</th>
+    <th scope="col">10 Km</th>
+    <th scope="col">Total</th>
 </tr>
 <tr>
-    <td>Position</td>
-    <td>First Name</td>
-    <td>Last Name</td>
-    <td>Gender</td>
-    <td>Age-Group</td>
-    <td>5 Mile</td>
-    <td>5 Km</td>
-    <td>10 Km</td>
-    <td>Total</td>
-</tr>
-<tr>
-    <td>1</td>
+    <td>1</td>                                  
     <td>Steve</td>
     <td>Cram</td>
     <td>M</td>
