--- a/ourc_home.htm
+++ b/ourc_home.htm
@@ -19,7 +19,7 @@
 <nav class="navbar"> 
 <a href="ourc_home.htm">Home |</a> 
 <a href="ourc_data.htm">Runner Data |</a>
-<a href="dummy.htm">About OURC |</a> 
+<a href="dummy.htm">About OURC |</a> <!--Q1 link amended-->
 <a href="dummy.htm">Extra link 2 |</a>
 <a href="dummy.htm">Extra link 3</a>
     </nav>
@@ -38,7 +38,7 @@
 <h2>About the running club</h2>
 <p>The Club is run on a rather informal basis in that there are no fixed meeting times or formally arranged groups, or club fees! </p>
 <p>Runners usually run at lunchtimes and meet each other by informal arrangement at the pavilion. In general there is a group (mainly men) that leaves for a run at about 12.20pm and then other groups (mainly women) that leave between 12.30pm and 12.45pm. </p>
-<figure><figcaption>OURC fun run</figcaption><img src="images/runners.jpg" alt="" /></figure>
+<figure><figcaption>OURC fun run</figcaption><img src="images/runners.jpg" alt="OURC Members fun run" /></figure><!--Q2 alt text provided-->
 <p>From time to time there are more organized training sessions to do fartlek or interval training.</p>
 <p>Each month a handicap race is arranged so that runners can compete with one another. These races are either 5 miles, 10km or 5km.</p>
 <p>Ut lacus orci, aliquam a lacus sit amet, aliquet pulvinar odio. Integer quis ex et nulla vestibulum consectetur quis et quam. Donec eleifend felis non ultrices pharetra. Vivamus non dolor aliquet, suscipit nisi sit amet, vehicula nisl. In nec pretium mi. Aenean sit amet arcu maximus, gravida orci non, dictum odio. 
