--- a/ourc_home.htm
+++ b/ourc_home.htm
@@ -17,6 +17,7 @@
 <header class="ourchead">Open University Running Club</header>
 
 <nav class="navbar"> 
+<a href="#main_anchor">Go to main story |</a>
 <a href="ourc_home.htm">Home |</a> 
 <a href="ourc_data.htm">Runner Data |</a>
 <a href="dummy.htm">About OURC |</a> <!--Q1 link amended-->
@@ -35,7 +36,7 @@
 </aside>
 
 <section id="sectionhome"> <!--Q1 whitespace eliminated-->
-<h2>About the running club</h2>
+<h1 id="main_anchor">About the running club</h1>
 <p>The Club is run on a rather informal basis in that there are no fixed meeting times or formally arranged groups, or club fees! </p>
 <p>Runners usually run at lunchtimes and meet each other by informal arrangement at the pavilion. In general there is a group (mainly men) that leaves for a run at about 12.20pm and then other groups (mainly women) that leave between 12.30pm and 12.45pm. </p>
 <figure><figcaption>OURC fun run</figcaption><img src="images/runners.jpg" alt="OURC Members fun run" /></figure><!--Q2 alt text provided-->
