--- a/ourc_data.htm
+++ b/ourc_data.htm
@@ -15,7 +15,7 @@
 <header class="ourchead">Open University Running Club</header> <!--Q1b Header and nav included -->
 
 <nav class="navbar"> 
-<a href="#tableoctober">Go to Latest Run|</a>
+<a href="#tableoctober">Skip to Latest Run|</a>
 <a href="ourc_home.htm">Home |</a> 
 <a href="ourc_data.htm">Runner Data |</a>
 <a href="dummy.htm">About OURC |</a> 
