--- a/ourc_home.htm
+++ b/ourc_home.htm
@@ -17,7 +17,7 @@
 <header class="ourchead">Open University Running Club</header>
 
 <nav class="navbar"> 
-<a href="#main_anchor">Go to main story |</a>
+<a href="#main_anchor">Skip to main story |</a>
 <a href="ourc_home.htm">Home |</a> 
 <a href="ourc_data.htm">Runner Data |</a>
 <a href="dummy.htm">About OURC |</a> <!--Q1 link amended-->
